--- a/package.json
+++ b/package.json
@@ -28,24 +28,24 @@
   },
   "devDependencies": {
     "@roxi/routify": "^2.14.0",
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.10",
+    "autoprefixer": "^10.4.0",
+    "cross-env": "^7.0.3",
+    "cssnano": "^5.0.14",
+    "esbuild": "^0.8.42",
     "fkill": "^8.0.0",
     "npm-run-all": "^4.1.5",
-    "svelte": "^3.35.0",
-    "cross-env": "^7.0.3",
+    "postcss": "^8.2.4",
+    "postcss-import": "^14.0.2",
+    "spank": "^1.5.0",
     "spassr": "^2.4.1-0",
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.10",
+    "svelte": "^3.35.0",
     "svelte-hmr": "^0.14.4",
+    "svelte-preprocess": "^4.10.1",
+    "tailwindcss": "^3.0.7",
     "vite": "^2.3.7",
     "vite-main-js": "^0.0.1",
-    "workbox-cli": "^6.1.0",
-    "esbuild": "^0.8.42",
-    "spank": "^1.5.0",
-    "svelte-preprocess": "^4.10.1",
-    "postcss": "^8.2.4",
-    "autoprefixer": "^10.4.0",
-    "cssnano": "^5.0.14",
-    "postcss-import": "^14.0.2",
-    "tailwindcss": "^3.0.7"
+    "workbox-cli": "^6.1.0"
   },
   "routify": {
     "extensions": "svelte,html,svx,md"
@@ -64,5 +64,8 @@
   },
   "ava": {
     "verbose": true
+  },
+  "dependencies": {
+    "tsparticles": "^1.37.6"
   }
 }
