--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "build:static": "spank"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "@roxi/routify": "^2.14.0",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.10",
     "autoprefixer": "^10.4.0",
