--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "svelte-preprocess": "^4.10.1",
     "tailwindcss": "^3.0.7",
     "vite": "^2.3.7",
-    "vite-main-js": "^0.0.1"
+    "vite-main-js": "^0.0.1",
+    "vite-plugin-pwa": "^0.12.0",
+    "workbox-window": "^6.5.3"
   },
   "routify": {
     "extensions": "svelte,html,svx,md"
