--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "build:static": "spank"
   },
   "devDependencies": {
+    "@fontsource/ibm-plex-sans": "^4.5.10",
+    "@fontsource/space-grotesk": "^4.5.8",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@roxi/routify": "^2.14.0",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.10",
