--- a/src/components/apps.json
+++ b/src/components/apps.json
@@ -48,7 +48,7 @@
         },
         {
             "title": "Support",
-            "desc": "Get help with Unixfy.net services",
+            "desc": "Get help with Unixfy.net",
             "url": "https://unixfy-support.refined.site",
             "icon": "fas fa-life-ring",
             "category": "Services"
