--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,10 @@
-.idea
 .DS_Store
-.nyc_output
-.vscode
 node_modules
-*.map
-/src/compiler/compile/internal_exports.ts
-/compiler.d.ts
-/compiler.*js
-/index.*js
-/ssr.*js
-/action
-/internal
-/store
-/easing
-/motion
-/transition
-/animate
-/scratch/
-/test/*/samples/_
-/yarn-error.log
-_actual*.*
-_output
-/types
-.routify
-dist
+/build
+/.svelte-kit
+/package
+.env
+.env.*
+!.env.example
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
