--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@fontsource/ibm-plex-sans": "^5.0.1",
+		"@fontsource/space-grotesk": "^5.0.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"autoprefixer": "^10.4.14",
